# frame

./: .gitignore  pyproject.toml
frame/apps/inbox/: admin.py  forms.py  models.py  urls.py  views.py
frame/apps/inbox/migrations/: 0001_initial.py
frame/apps/inbox/templates/inbox/: conversation.html  form_new_message.html  form_new_reply.html  form_search_user.html  inbox.html  list_search_user.html  (+1 more)
frame/apps/posts/: admin.py  forms.py  models.py  views.py
frame/apps/posts/migrations/: 0001_initial.py  0002_alter_post_options_post_artist_post_url.py  0003_tag_post_tags.py  0004_alter_tag_options_tag_order.py  0005_tag_image.py  0006_post_author.py  0007_comment.py  0008_alter_comment_options_reply.py  0009_likedpost_post_likes.py  0010_likedcomment_comment_likes.py  0011_likedreply_reply_likes.py
frame/apps/posts/templatetags/: sidebar.py
frame/apps/users/: apps.py  forms.py  models.py  signals.py  views.py
frame/apps/users/migrations/: 0001_initial.py
frame/core/: settings.py  urls.py
frame/templates/: base.html
frame/templates/account/: login.html
frame/templates/allauth/layouts/: base.html
frame/templates/apps/posts/: comment.html  comment_delete.html  home.html  post.html  post_delete.html  post_edit.html  post_page.html  reply.html  reply_delete.html
frame/templates/apps/users/: profile.html  profile_delete.html  profile_edit.html  profile_onboarding.html
frame/templates/includes/: header.html  hero.html  sidebar.html
frame/templates/layouts/: a.html  b.html  d.html
frame/templates/snippets/: add_comment.html  add_reply.html  likes.html  likes_comments.html  likes_reply.html  loop_home_posts.html  loop_post_comments.html  loop_profile_comments.html  loop_profile_posts.html
