[tool.poetry]
name = "frame"
version = "0.1.0"
description = ""
authors = ["Carlos Eduardo <ducameneses16@gmail.com>"]
readme = "README.md"
packages = [
    { include = "frame" },
]

[tool.poetry.dependencies]
python = "3.12.*"
django = "^5.1.2"
beautifulsoup4 = "^4.12.3"
httpx = "^0.27.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.7.0"
taskipy = "^1.13.0"

[tool.ruff]
line-length = 79
extend-exclude = ['**/apps/**/migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.taskipy.tasks]
lint = 'ruff check . && ruff check . --diff'
format = 'ruff check . --fix && ruff format .'
makemigrations = 'python frame/manage.py makemigrations'
migrate = 'python frame/manage.py migrate'
runserver = 'python frame/manage.py runserver'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
